--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,68 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-      
+        <ImageView
+            android:id="@+id/content_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="183dp"
+            app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
+        </ImageView>
+
+        <EditText
+            android:id="@+id/search_edit"
+            android:layout_width="190dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/content_viewpager"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="27dp"
+            android:background="@null"
+            />
+        <ImageView
+            android:id="@+id/search_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/search_edit"
+            app:layout_constraintTop_toTopOf="@id/search_edit"
+            app:layout_constraintStart_toEndOf="@+id/search_edit"
+            android:src="@drawable/search_copy"
+
+            />
+        <ImageView
+            android:id="@+id/bar_img"
+            android:background="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/invalid_name"
+            app:layout_constraintTop_toBottomOf="@id/search_img"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/title_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:textColor="#de000000"
+            android:letterSpacing="-0.04"
+            android:gravity="center_horizontal"
+            tools:text="지금 가장 HOT한 작가는?"
+            app:layout_constraintTop_toBottomOf="@id/bar_img"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="33dp"
+            />
+
+        <fragment
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/title_txt"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="10dp"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
