--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="colorMain">#ad8dfd</color>
+    <color name="colorTabSelected">#de000000</color>
+    <color name="colorTab">#8a000000</color>
 </resources>
