--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,15 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#ad8dfd</color>
+
+    <color name="colorMain">#ad8dfd</color>
+    <color name="colorChatBackground">#f1efef</color>
+    <color name="colorChatToolbar">#f5f5f5</color>
+    <color name="colorChatName">#333942</color>
+    <color name="colorChatEditText">#c8838383</color>
+    <color name="colorChatPartner">#a7a0a0a0</color>
+
+    <color name="colorText">#363636</color>
+    <color name="colorTime">#9d9d9d</color>
 </resources>
