--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
             android:layout_marginTop="27dp"
             android:background="@null"
             />
+
         <ImageView
             android:id="@+id/search_img"
             android:layout_width="wrap_content"
@@ -67,14 +68,13 @@
             android:layout_marginTop="33dp"
             />
 
-        <fragment
-            android:layout_width="0dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/creator_recycler_view"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/title_txt"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
