--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="colorAccent">#ad8dfd</color>
 
     <color name="colorMain">#ad8dfd</color>
-    <color name="colorPortfolioBackground">#c2c2c2</color>
+    <color name="colorPortfolioBackground">#f3f3f3</color>
+    <color name="colorPortfolioIndicator">#c2c2c2</color>
     <color name="colorPortfolioTab">#8a000000</color>
     <color name="colorTabSelected">#de000000</color>
     <color name="colorTab">#8a000000</color>
