category and main

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#AAA9A9</color>
     <color name="colorAccent">#D81B60</color>
-
+<color name="on">#de000000</color>
+    <color name="off">#8a000000</color>
 </resources>
