--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <View
+            android:id="@+id/category_view"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            app:layout_constraintTop_toBottomOf="@id/main_toolbar"
+            />
+        
+        <TextView
+            android:id="@+id/txt1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="홈"
+            android:textColor="@color/change"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/category_view"
+            app:layout_constraintBottom_toBottomOf="@id/category_view"
+            />
+
+
         <ImageView
             android:id="@+id/content_viewpager"
             android:layout_width="match_parent"
             android:layout_height="183dp"
-            app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
+            android:src="@drawable/ad1"
+            app:layout_constraintTop_toBottomOf="@+id/category_view">
         </ImageView>
 
         <EditText
@@ -28,7 +48,7 @@
             app:layout_constraintTop_toBottomOf="@id/content_viewpager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="27dp"
+            android:layout_marginTop="15dp"
             android:background="@null"
             />
 
@@ -56,17 +76,17 @@
             android:id="@+id/title_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
+            android:textSize="18dp"
             android:textStyle="bold"
             android:textColor="#de000000"
-            android:letterSpacing="-0.04"
-            android:gravity="center_horizontal"
-            tools:text="지금 가장 HOT한 작가는?"
+            android:text="지금 가장 HOT한 작가는?"
             app:layout_constraintTop_toBottomOf="@id/bar_img"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="33dp"
+              android:layout_marginLeft="10dp"
+            android:layout_marginTop="25dp"
+
             />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/creator_recycler_view"
@@ -80,3 +100,13 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
 
+<!--
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:orientation="horizontal"
+            android:id="@+id/category_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            app:layout_constraintTop_toBottomOf="@id/main_toolbar"
+            />
+-->
