--- a/app/src/main/res/layout/activity_portfolio.xml
+++ b/app/src/main/res/layout/activity_portfolio.xml
@@ -5,6 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.portfolio.PortfolioActivity">
 
+    <data>
+        <import type="com.korea.hacks.view.portfolio.entity.ViewType" />
+        <variable
+            name="vm"
+            type="com.korea.hacks.view.portfolio.PortfolioViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,6 +23,7 @@
             android:layout_height="wrap_content"
             android:padding="20dp"
             android:src="@drawable/ic_back_portfolio"
+            android:onClick="@{() -> vm.onMoveViewClick(ViewType.BACK)}"
             app:layout_constraintBottom_toTopOf="@+id/view_pager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,6 +34,7 @@
             android:layout_height="wrap_content"
             android:padding="20dp"
             android:src="@drawable/ic_chat_portfolio"
+            android:onClick="@{() -> vm.onMoveViewClick(ViewType.CHAT)}"
             app:layout_constraintBottom_toTopOf="@+id/view_pager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/iv_back"/>
@@ -40,13 +49,14 @@
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
+                android:layout_height="wrap_content"
                 app:tabGravity="center"
                 app:tabIndicatorColor="@color/colorPortfolioIndicator"
                 app:tabIndicatorFullWidth="true"
                 app:tabIndicatorHeight="4dp"
                 app:tabMinWidth="77dp"
                 app:tabMode="fixed"
+                app:tabPaddingBottom="3dp"
                 app:tabRippleColor="@null"
                 app:tabSelectedTextColor="@color/colorMain"
                 app:tabTextColor="@color/colorTab" />
