--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,16 @@
     <color name="colorAccent">#ad8dfd</color>
 
     <color name="colorMain">#ad8dfd</color>
+
+    <!-- activity_portfolio -->
     <color name="colorPortfolioBackground">#f3f3f3</color>
     <color name="colorPortfolioIndicator">#c2c2c2</color>
     <color name="colorPortfolioTab">#8a000000</color>
     <color name="colorTabSelected">#de000000</color>
     <color name="colorTab">#8a000000</color>
+
+    <!-- activity_contact -->
+    <color name="colorContactBackground">#1f1f1f</color>
+    <color name="colorContactBtnBackground">#16f9f9f9</color>
+    <color name="colorContactBtnText">#c7a19f9f</color>
 </resources>
