--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
 <color name="on">#de000000</color>
     <color name="off">#8a000000</color>
+    <color name="bgOn">#959596</color>
+    <color name="bgOff">#FFFFFF</color>
 </resources>
