--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,18 +20,68 @@
             android:layout_height="32dp"
             app:layout_constraintTop_toBottomOf="@id/main_toolbar"
             />
-        
-        <TextView
+
+        <Button
             android:id="@+id/txt1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="32dp"
             android:text="홈"
             android:textColor="@color/change"
+            android:background="@drawable/background_change"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/txt2"
+            app:layout_constraintTop_toTopOf="@id/category_view"
+            app:layout_constraintBottom_toBottomOf="@id/category_view"
+            />
+        <Button
+            android:id="@+id/txt2"
+            android:layout_width="0dp"
+            android:layout_height="32dp"
+            android:text="디자인"
+            android:textColor="@color/change"
+            android:background="@drawable/background_change"
+            app:layout_constraintStart_toEndOf="@id/txt1"
+            app:layout_constraintEnd_toStartOf="@id/txt3"
             app:layout_constraintTop_toTopOf="@id/category_view"
             app:layout_constraintBottom_toBottomOf="@id/category_view"
             />
 
+        <Button
+            android:id="@+id/txt3"
+            android:layout_width="0dp"
+            android:layout_height="32dp"
+            android:text="IT"
+            android:textColor="@color/change"
+            android:background="@drawable/background_change"
+            app:layout_constraintStart_toEndOf="@id/txt2"
+            app:layout_constraintEnd_toStartOf="@id/txt4"
+            app:layout_constraintTop_toTopOf="@id/category_view"
+            app:layout_constraintBottom_toBottomOf="@id/category_view"
+            />
+        <Button
+            android:id="@+id/txt4"
+            android:layout_width="0dp"
+            android:layout_height="32dp"
+            android:text="콘텐츠"
+            android:textColor="@color/change"
+            android:background="@drawable/background_change"
+            app:layout_constraintStart_toEndOf="@id/txt3"
+            app:layout_constraintEnd_toStartOf="@id/txt5"
+            app:layout_constraintTop_toTopOf="@id/category_view"
+            app:layout_constraintBottom_toBottomOf="@id/category_view"
+            />
+        <Button
+            android:id="@+id/txt5"
+            android:layout_width="0dp"
+            android:layout_height="32dp"
+            android:text="번역"
+            android:textColor="@color/change"
+            android:background="@drawable/background_change"
+            app:layout_constraintStart_toEndOf="@id/txt4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/category_view"
+            app:layout_constraintBottom_toBottomOf="@id/category_view"
+            />
 
         <ImageView
             android:id="@+id/content_viewpager"
@@ -99,14 +149,3 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
-
-<!--
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:orientation="horizontal"
-            android:id="@+id/category_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            app:layout_constraintTop_toBottomOf="@id/main_toolbar"
-            />
--->
