--- a/app/src/main/res/layout/activity_portfolio.xml
+++ b/app/src/main/res/layout/activity_portfolio.xml
@@ -50,6 +50,7 @@
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="20dp"
                 app:tabGravity="center"
                 app:tabIndicatorColor="@color/colorPortfolioIndicator"
                 app:tabIndicatorFullWidth="true"
