--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout>
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.main.MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".view.MainActivity"
+    android:id="@+id/drawer_layout1"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
+    <!--main layout-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -100,6 +108,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="15dp"
             android:background="@null"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             />
 
         <ImageView
@@ -148,4 +158,17 @@
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/drawerlayout"
+        android:clickable="true"
+        app:headerLayout="@layout/navigation_header"
+        />
+
+</androidx.drawerlayout.widget.DrawerLayout>
 </layout>
