--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,19 +91,18 @@
             app:layout_constraintBottom_toBottomOf="@id/category_view"
             />
 
-        <ImageView
-            android:id="@+id/content_viewpager"
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/guide_view_pager"
             android:layout_width="match_parent"
             android:layout_height="183dp"
             android:src="@drawable/card_2"
-            app:layout_constraintTop_toBottomOf="@+id/category_view">
-        </ImageView>
+            app:layout_constraintTop_toBottomOf="@+id/category_view"/>
 
         <EditText
             android:id="@+id/search_edit"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/content_viewpager"
+            app:layout_constraintTop_toBottomOf="@id/guide_view_pager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="15dp"
