--- a/app/src/main/res/layout/creator_item_view.xml
+++ b/app/src/main/res/layout/creator_item_view.xml
@@ -13,7 +13,7 @@
     android:layout_width="160dp"
     android:layout_height="108dp"
     android:adjustViewBounds="true"
-    android:scaleType="centerInside"
+    android:scaleType="fitXY"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
